# notgine

./: .gitignore  .gitingnore  CMakeLists.txt  README.md  README_es.md
cmake/: Compiler.cmake  Dependencies.cmake  Executables.cmake  Libraries.cmake  Warnings.cmake
docs/: ENGINE_DESIGN.md  ENGINE_DESIGN_es.md
include/notgine/: notgine.hpp
